Increase mobile cutoff to 800 - fixes #150

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,10 @@
-@media (min-width: 651px) {
+@media (min-width: 801px) {
   #geolocate {
     display: none;
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 800px) {
   /* Hide everything */
   #plans,
   #search,
